update backup & todo

--- a/TODO
+++ b/TODO
@@ -30,5 +30,36 @@ x   - scramble the menu
     - new plays
         - build pages
         - add links to menu
+        
+        
+#############
+### NOTES ###
+#############
+        
+    check out this scrolling sidebar
+    https://www.w3schools.com/Css/tryit.asp?filename=trycss_navbar_vertical_fixed
+    
+    custom cursors
+    https://stackoverflow.com/questions/18551277/using-external-images-for-css-custom-cursors#18551357
+    
+    90s web design
+    https://www.webdesignmuseum.org/exhibitions/web-design-in-the-90s
+        
+#####################        
+####  NEW PLAYS  ####
+#####################
 
 
+v13 -CLEANLINESS IS HORNINESS
+v14 -Shedd Aquarium Allows Penguins to Roam Free During Quarantine
+v15 - Space Is Where I live Now
+v16 - Communion Lives Beyond Walls (Kirsten, Leah, Jasmine)
+v17 -A play for Alan Ledford
+v18 - I’ve never been a strong swimmer
+v19 - I don’t want to play in your yard
+
+        
+        
+
+        
+        
