--- a/TODO
+++ b/TODO
@@ -11,14 +11,19 @@ X   - decorate template pages
 --- week 2 ---
 X  - use #sections to make sure you end up below the intro every time
 X   - copy github repo
-    - intro & outro video: set opacity 1 (inherits from parent div??) 
+X   - intro & outro video: set opacity 1 (inherits from parent div??) 
 
     
     
     - update styles
         - menu style
+            change animations
+            refresh background image
+            update credits
+            fill out language at top with some kurt-isms
+            
         - play style
-        
+            refresh background image
         
         
     
