play titles on individual pages; new IDES background; detail header

--- a/TODO
+++ b/TODO
@@ -33,8 +33,11 @@ X   - easier ways to do templates?
     X -   external CSS stylesheet
 x   - scramble the menu    
     - new plays
-        - build pages
-        - add links to menu
+      X  - build pages
+      X  - add links to menu
+      
+      
+    - CREDITS
         
         
 #############
