--- a/TODO
+++ b/TODO
@@ -3,10 +3,10 @@
 ########
 
 
---- week 1 ---
-X   - background for menu page
-X   - decorate template pages
-    - embed fonts? 
+--- week 3 ---
+ - photobooths
+ - does it look too modern now? maybe take it back a little, rough it up
+ - correct "lynrd skynrd" 
 
 --- week 2 ---
 X  - use #sections to make sure you end up below the intro every time
@@ -18,12 +18,12 @@ X   - intro & outro video: set opacity 1 (inherits from parent div??)
     - update styles
         - menu style
         X    change animations
-            refresh background image
-            update credits
-            fill out language at top with some kurt-isms
+	X    refresh background image
+        X    update credits
+        X    fill out language at top with some kurt-isms
             
         - play style
-            refresh background image
+        X    refresh background image
         
         
     
@@ -37,10 +37,16 @@ x   - scramble the menu
       X  - add links to menu
       
       
-    - CREDITS
-        my song
-        KR's song
-        
+   X - CREDITS
+      x  my song
+      x  KR's song
+
+
+--- week 1 ---
+X   - background for menu page
+X   - decorate template pages
+x    - embed fonts? 
+
         
 #############
 ### NOTES ###
